# ADMSQUAD

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/: config.py  logger.py  main.py
backend/src/api/routers/: auth.py  cx.py  dashboard.py  gestao.py  operacoes.py  pendencias.py  pmo.py  user.py
backend/src/application/: ports.py
backend/src/application/use_cases/: login_user.py
backend/src/domain/: user.py
backend/src/infrastructure/db/: database.py  migrate.sql  models.py  user_repository.py
backend/src/infrastructure/security/: crypto.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: app-layout.tsx  sidebar.tsx
frontend/src/components/ui/: protected-route.tsx
frontend/src/lib/: http-client.ts
frontend/src/pages/configuracoes/: configuracoes-page.tsx  usuarios-page.tsx
frontend/src/pages/cx/: adiantar-atendimentos.tsx  agendar-atualizacao.tsx  clientes-list-page.tsx  consultar-atualizacao-linx.tsx  cx-page.tsx  monitor-atualizacoes.tsx
frontend/src/pages/dashboard/: clientes-pmo-lista.tsx  dashboard-page.tsx
frontend/src/pages/gestao/: bi-page.tsx  gestao-page.tsx  links-uteis-page.tsx  resultados-page.tsx  smartbooks-page.tsx
frontend/src/pages/login/: login-page.tsx
frontend/src/pages/operacoes/: apoios-help-page.tsx  daily-pendencias.tsx  gerador-codigo-ccm.tsx  monitor-atividades.tsx  operacoes-page.tsx  tarefas-page.tsx
frontend/src/services/: service-auth.ts
frontend/src/store/: auth-store.ts
frontend/src/styles/: ccm.css
(+4 files in other folders)
