[project]
name = "ccm-app-backend"
version = "1.0.0"
description = "CCM App — Backend API (Python + FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncmy>=0.2.9",
    "bcrypt>=4.1.3",
    "PyJWT>=2.8.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
